<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_db">Inventory</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_add">ADD INVENTORY</string>

    <string name="delete_inventory">Delete Record</string>
    <string name="delete_inventory_detail">Are you sure you want to delete this record?</string>
    <string name="delete_inventory_confirm">Yes</string>
    <string name="delete_inventory_cancel">No</string>

    <string name="add_codigo">Code</string>
    <string name="add_description">Description</string>
    <string name="add_quantity">Quantity</string>
    <string name="add_weight">Weight</string>
    <string name="add_size">Size</string>

    <string name="add_btn_add">Add</string>
    <string name="add_btn_clear">Clear</string>
    <string name="saved_successfully">Record saved successfully</string>
    <string name="saved_failed">The record is stored in the database</string>
    <string name="titulo_detalle">Inventory detail</string>
    <string name="etiqueta_boton_eliminar">Remove</string>
</resources>
